chore: Decrease Java version to 17